# reachy-mini-lessongraph

./: .claude  .clauderc  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: settings.local.json
chroma_index/: chroma.sqlite3
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/: App.css  App.tsx  api.ts  types.ts
dashboard/frontend/src/components/: ActiveSessions.tsx  DashboardOverview.tsx  LessonsList.tsx  SessionsList.tsx  StudentDashboard.tsx  StudentsList.tsx
dashboard/server/: package-lock.json  package.json
dashboard/server/src/: db.js  index.js  routes.js  websocket.js
lessons/basic-mandarin/: basic-mandarin-lesson1.md  basic-mandarin-lesson2.md
lessons/python-fundamentals/: functions.md
scripts/: reachy_connect_smoke.py  reachy_inspect.py  reachy_robot_adapter_smoke.py  reachy_robot_test.py  reachy_voice_smoke.py
src/reachy_teacher/: course_graph.py  db.py  document_loader.py  inspect_db.py  lesson_debug.py  planner_only_graph.py  progression_smoke.py  rag_smoke.py  reachy_connection_test.py  state.py  teach_graph.py
src/reachy_teacher/agents/: grader_agent.py  progression_agent.py  quiz_agent.py  summary_agent.py
src/reachy_teacher/io/: reachy-mini-robot.py  robot_base.py  robot_factory.py  robot_mock.py  robot_reachy.py  robot_reachy_media.py
