[project]
name = "reachy-rag-tutor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.2.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
